# MVP_TFOA_first_test

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  ai_debug_run.bat  debug_run.bat  docker-compose.yml  start_verification.ps1
.github/workflows/: lint.yml
ai-service/: .ruff.toml  check_env.py  goap.py  main.py  pyproject.toml  requirements.txt  test_ai.py  test_api_integration.py  test_economic_planner.py  test_goal_generator.py  test_goal_manager.py  test_goap_basic.py  test_integration_e2e.py  test_main.py
ai-service/planning/: __init__.py  action_registry.py  debugger.py  economic_planner.py  goal_generator.py  goal_manager.py  types.py
ai-service/services/: planning_service.py  utility_service.py
client/: .eslintrc.json  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
docs/: Phase4_IP.md  Phase4_Tasks.md  phase3_item_durability.md  phase3_ui_improvements.md
docs/ai-system/: README.md  goap-system.md  memory-system.md  personality-system.md  social-dynamics.md  spatial-awareness.md
docs/architecture/: ai-planning.md  system-overview.md
docs/design/: ai_planning_architecture.md
docs/development/: linting.md  testing.md  workflow.md
docs/getting-started/: running.md  setup.md
docs/ideas-thoughts/: GDD TFOA.md  ai_enhancement.txt  prompt.md  prompt.txt  todo  transport_worldstate
docs/reports/: README.md  phase3_ai_memory.md  phase3_interactive_entities.md  phase3_item_durability.md  phase_4_report.md  (+3 more)
simulation-core/: .eslintrc.json  jest.config.js  package-lock.json  package.json  tsconfig.json
(+148 files in other folders)
