[project]
name = "ai-service"
version = "1.0.0"
description = "AI Planning Service for TFOA"
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = [".", "planning"]
python_files = "test_*.py"
python_functions = "test_*"
